<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:background="#FFBBDEFB"> <!-- Light blue background -->

    <!-- Monday's forecast -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/partly_cloudy_icon"
            android:contentDescription="@string/mondayweather" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mon"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partly_cloudy_24c_31c"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <!-- Tuesday's forecast -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/showers_icon"
            android:contentDescription="@string/tuesdayweather" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/tue"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/showers_24c_30c"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <!-- Wednesday's forecast -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/rain_icon"
            android:contentDescription="@string/wednesdayweather" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wed"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rain_22c_23c"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <!-- Thursday's forecast -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/showers_icon"
            android:contentDescription="@string/thursdayweather" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thu"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scattered_showers_22c_27c"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <!-- Friday's forecast -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/mostly_cloudy_icon"
            android:contentDescription="@string/fridayweather" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fri"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mostly_cloudy_22c_30c"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <!-- Saturday's forecast -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/partly_cloudy_icon"
            android:contentDescription="@string/sundayweather" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sat"
            android:textSize="18sp"
            android:paddingStart="16dp"
            android:layout_gravity="center_vertical" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partly_cloudy_24c_31c"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:layout_gravity="center_vertical" />

    </LinearLayout>

    <!-- Sunday's forecast -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="15dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:contentDescription="@string/sundayweather"
            android:src="@drawable/thunderstorms_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/sun"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingStart="16dp"
            android:text="@string/thunderstorms_25c_28c"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>
